# osdev

./: .gitignore  CMakeLists.txt  README.md
docs/: BTOSUserspaceAPI.odt  Grub.txt  Plug and Play.doc  script-example.txt
other/art/: BTOS-Logo.xcf  BTOS-bootscreen-mono.xbm  BTOS-bootscreen-mono.xcf  grub.pf2  splash.tga
src/: Makefile  backup-toolchain.sh  colourmake.sh  env-os.sh  env.sh  gdbkernel.sh  gdbkernel2.sh  gdbprof.sh  kstat.py  os.project  os.workspace  qemu-launch-opts.template  rebuild-libstdc++.sh  rebuild-newlib.sh  setup-binutils.sh  setup-gcc.sh  setup-toolchain.sh
src/.codelite/: os.session  os.workspace.mallard
src/binutils-2.23/: md5.sum
src/binutils-2.23/bfd/: ChangeLog  configure  configure.in
src/binutils-2.23/gprof/: gprof.info
src/binutils-2.23/ld/: ld.info
src/build-binutils/: Makefile  config.status
src/build-binutils/bfd/: Makefile  bfd.h  bfd_stdint.h  bfdver.h  coff-i386.lo  config.cache  config.h  config.status  elf32-target.h  elf64-target.h  ofiles  targmatch.h
src/build-binutils/binutils/: Makefile  config.cache  config.h  config.status
src/build-binutils/etc/: Makefile  config.cache  config.status
src/build-binutils/gas/: .gdbinit  Makefile  config.cache  config.h  config.status  targ-env.h
src/build-binutils/gprof/: Makefile  config.cache  config.status  gconfig.h
src/build-binutils/intl/: Makefile  config.cache  config.status
src/build-binutils/ld/: Makefile  config.cache  config.h  config.status  eelf_i386.c  tdirs
src/build-binutils/libiberty/: Makefile  config.cache  config.h  config.status  required-list
src/build-binutils/opcodes/: Makefile  config.cache  config.h  config.status
src/build-gcc/: Makefile  config.status
src/build-gcc/build-x86_64-unknown-linux-gnu/: config.cache
src/build-gcc/fixincludes/: Makefile  config.cache  config.h  config.status  mkheaders  mkheaders.almost
src/build-gcc/gcc/: .gdbinit  Make-hooks  Makefile  auto-host.h  b-header-vars  cc1-checksum.c  cc1plus-checksum.c  checksum-options  config.cache  config.status  configargs.h  gcc-vers.texi  gcov-iov.h  gpl.pod  gt-ada-decl.h  gt-ada-misc.h  gt-ada-trans.h  gt-ada-utils.h  gt-alias.h  gt-asan.h  gt-bitmap.h  gt-c-c-decl.h  gt-c-c-parser.h  gt-c-family-c-common.h  gt-c-family-c-cppbuiltin.h  gt-c-family-c-pragma.h  gt-caller-save.h  gt-cfgrtl.h  gt-cgraph.h  gt-cgraphclones.h  gt-cgraphunit.h  gt-coverage.h  gt-cp-call.h  gt-cp-class.h  gt-cp-cp-lang.h  gt-cp-cp-objcp-common.h  gt-cp-decl.h  gt-cp-decl2.h  gt-cp-except.h  gt-cp-mangle.h  (+118 more)
src/build-gcc/intl/: Makefile  config.cache  config.status
src/build-gcc/libbacktrace/: Makefile  config.cache  config.h  config.status
src/build-gcc/libcpp/: Makefile  config.cache  config.h  config.status  localedir.h
src/build-gcc/libdecnumber/: Makefile  config.cache  config.status
src/build-gcc/libiberty/: Makefile  config.cache  config.status  required-list
src/build-gcc/lto-plugin/: Makefile  config.cache  config.status
src/build-gcc/zlib/: Makefile  config.cache  config.status
src/disk/: Makefile  check.sh
src/disk/diskfiles/: autoexec.cmd  clearreg.cmd  init.cmd
src/include/: bt_enum.h  bt_msg.h  btos.h  btos_api.h  btos_module.h  btos_stubs.h  circular_buffer.hpp  crt_support.h  debug.h  drivers.h  extension.h  fs_interface.h  handle.h  io.h  ioctl.h  keyboard.h  locktype.h  ministl.hpp  module_api.h  module_cpp.hpp  module_stubs.h  mouse.h  operation_queue.hpp  pci.h  terminal.h  video_dev.h
src/include/btos/: atom.hpp  atoms.h  bt_msg.h  btos_api.h  btos_stubs.h  clipboard.hpp  core.h  devices.h  directory.hpp  envvars.hpp  file.hpp  fs_interface.h  handle.hpp  imessagehandler.hpp  ini.hpp  ioctl.h  kernel_calls.h  message.hpp  messageloop.hpp  multiwait.hpp  old_calls.h  permissions.h  process.hpp  processlist.hpp  registry.hpp  resc.h  shm.hpp  table.hpp  thread.hpp  timer.hpp
src/include/cmd/: commands.hpp  globbing.hpp  path.hpp  script_commands.hpp  scripting.hpp  utils.hpp
src/include/dev/: hwpnp.hpp  keyboard.h  mouse.h  pci.h  (+6 more)
src/iso/: Makefile
src/kernel/: Bakefile  Makefile  amm.cpp  amm.hpp  amm_flags.hpp  amm_page_accounting.cpp  amm_page_accounting.hpp  atoms.cpp  atoms.hpp  boot.s  buildid.sh  console.cpp  console.hpp  copy.txt  cpu.cpp  cpu.hpp  cpuid.c  cpuid.h  debug_ext.cpp  debug_ext.hpp  devfs.cpp  devfs.hpp  devices.cpp  devices.hpp  drivermgr.cpp  drivermgr.hpp  elf_format.hpp  extensions.cpp  extensions.hpp  filesystems.cpp  filesystems.hpp  fs_interface.hpp  gdt.cpp  gdtidt.s  handles.cpp  handles.hpp  hwpnp_kernel.hpp  idt.cpp  idt.h  idt.hpp  (+68 more)
src/modules/: Makefile
src/scripts/: elfembed.sh
src/tarinit/: Makefile
src/toolchain/newlib-2.1.0/newlib/libc/sys/btos/: Makefile.am  Makefile.in  args.c  configure  configure.in  crt0.S  crt_support.c  crt_support.h  crti.S  crtn.S  dirent.c  getenv.c  setjmp.c  signal.c  syscalls.c
src/user/: Makefile
tools/: tools.sh
(+1340 files in other folders)
